# alt-pytest-asyncio

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.rst  dev  find  format  lint  mypy.ini  pylama.ini  pyproject.toml  pytest.ini  setup.py  test.sh  tox.ini  types
.github/workflows/: ci.yml  lint.yml  release.yml
alt_pytest_asyncio/: __init__.py  async_converters.py  base.py  converter.py  enable.py  errors.py  loop_manager.py  machinery.py  plugin.py  protocols.py
docs/: README.rst  conf.py  index.rst
docs/_static/css/: extra.css
helpers/: pyproject.toml
helpers/alt_pytest_asyncio_test_driver/: __init__.py  contextvars_for_test.py
helpers/alt_pytest_asyncio_test_driver/examples/example_cli_timeout/: expected  test_timeouts.py
helpers/alt_pytest_asyncio_test_driver/examples/example_fixture_failures/: expected  test_fails.py
helpers/alt_pytest_asyncio_test_driver/examples/example_ini_timeout/: expected  pytest.ini  test_timeouts.py
helpers/alt_pytest_asyncio_test_driver/examples/example_timeouts/: conftest.py  expected  test_fails.py  test_fails_method_fixtures.py  test_fails_tests.py  test_surrounding_pytestmark.py
helpers/alt_pytest_asyncio_test_driver/examples/interrupt_test/: expected  pytest.ini
helpers/alt_pytest_asyncio_test_driver/examples/interrupt_test/tests/: test_example.py
tests/: conftest.py  test_examples.py  test_loop_manager.py  test_override_loop.py  test_tcp_one.py  test_tcp_two.py  test_test_with_custom_loop.py  test_works.py
tests/code_contextvars/: contextvars_for_test.py
tests/example_fixture_failures/: expected  test_fails.py
tests/example_timeouts/: conftest.py  expected  test_fails.py  test_fails_method_fixtures.py  test_fails_tests.py  test_surrounding_pytestmark.py
tests/interrupt_test/: expected  main.py
tests/interrupt_test/tests/: test_example.py
tests/test_contextvars/: conftest.py  test_contextvars.py  test_contextvars2.py
tools/: .requirements.readthedocs.txt  black  devtools.py  pylama  pyproject.toml  requirements.dev.txt  requirements.uv.txt  run.py  venv
