[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alt-pytest-asyncio"
dynamic = ["version"]
description = "Alternative pytest plugin to pytest-asyncio"
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">= 3.11"
authors = [
    { name = "Stephen Moore", email = "delfick755@gmail.com" },
]
classifiers = [
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest >= 8.0.0",
]

[project.optional-dependencies]
tests = [
    "nest-asyncio==1.6.0",
    "noseOfYeti[black]==2.4.9",
    "pytest==8.2.1",
    "pytest-order==1.2.1"
]

[project.entry-points.pytest11]
alt_pytest_asyncio = "alt_pytest_asyncio"

[project.urls]
Homepage = "https://github.com/delfick/alt-pytest-asyncio"

[tool.hatch.version]
path = "alt_pytest_asyncio/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/alt_pytest_asyncio",
]

[tool.black]
line-length = 100
include = '\.py$'
exclude = '''
/(
     \.git
   | \.tox
   | dist
   | tools/\.python
)/
'''

[tool.isort]
profile = "black"
skip_glob = [
   ".git/*",
   ".tox/*",
   "dist/*",
   "tools/.*",
]
