[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alt-pytest-asyncio"
dynamic = ["version"]
description = "Alternative pytest plugin to pytest-asyncio"
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">= 3.11"
authors = [
    { name = "Stephen Moore", email = "delfick755@gmail.com" },
]
classifiers = [
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest >= 8.0.0",
]

[project.entry-points.pytest11]
alt_pytest_asyncio = "alt_pytest_asyncio.plugin"

[project.urls]
Homepage = "https://github.com/delfick/alt-pytest-asyncio"

[project.optional-dependencies]
dev = [
    "tools",
    "alt_pytest_asyncio_test_driver"
]
tools = [
    "tools",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "alt_pytest_asyncio/version.py"

[tool.hatch.build.targets.wheel]
include = [
    "/alt_pytest_asyncio",
]

[tool.hatch.build.targets.sdist]
include = [
    "/alt_pytest_asyncio",
]

[tool.uv.sources]
tools = { workspace = true }
alt_pytest_asyncio_test_driver = { workspace = true }

[tool.uv.workspace]
members = ["tools", "helpers"]

[tool.ruff]
target-version = "py311"
line-length = 99
extend-exclude = [
    ".DS_Store",
    "tools/.bootstrap-venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "B008",  # mutable objects as function argument defaults
    "B015",  # flake8-bugbear (useless-comparison)
    "I",  # isort
    "UP",  # pyupgrade
    "RUF",
    "F",
]
