[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alt-pytest-asyncio-test-driver"
dynamic = ["version"]
license = { text = "MIT" }
authors = [
    { name = "Stephen Moore", email = "stephen@delfick.com" },
]
dependencies = [
    "nest-asyncio==1.6.0",
    "pytest==8.2.1",
    "pytest-order==1.2.1"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "alt_pytest_asyncio_test_driver/version.py"

[tool.hatch.build.targets.wheel]
include = [
    "/alt_pytest_asyncio_test_driver",
]
